<resources>
    <string name="app_name">SmartHomeControl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_save">Save</string>
    <string name="action_refresh">Refresh</string>

    <!--Drawer-->
    <string name="drawer_switch">Switch</string>
    <string name="drawer_theme">Theme</string>
    <string name="drawer_ipcam">IP Camera</string>
    <string name="drawer_preference">Preference</string>
    <string name="drawer_about">About</string>
    <string name="drawer_reference">Reference</string>
    <string name="drawer_exit">Exit</string>

    <!--Switch page-->
    <string name="switch_tab_tab1_title">Light</string>
    <string name="switch_tab_tab2_title">AC</string>
    <string name="switch_tab_tab3_title">Elevator</string>

    <string name="switch_light_1">Entrance</string>
    <string name="switch_light_2">Stair</string>
    <string name="switch_light_3">Hallway</string>
    <string name="switch_light_4">Living Room </string>
    <string name="switch_light_5">Bathroom 1</string>
    <string name="switch_light_6">Kitchen</string>
    <string name="switch_light_7">Bathroom 2</string>
    <string name="switch_light_8">Bedroom</string>

    <string name="switch_ac_nowtemp">Temperature</string>
    <string name="switch_ac_targettemp">Target Temp.</string>
    <string name="switch_ac_tx_wind">Wind</string>
    <string name="switch_ac_bt_windstrong">Strong</string>
    <string name="switch_ac_bt_windmedium">Medium</string>
    <string name="switch_ac_bt_windweak">Weak</string>
    <string name="switch_ac_tx_toggle">Power</string>

    <string name="switch_elevator_tx_floor">On Floor</string>
    <string name="switch_elevator_bt_secondfloor">2nd Floor</string>
    <string name="switch_elevator_bt_firstfloor">1st Floor</string>


    <!--IPCam Page-->
    <string name="ipcam_fab_load">Start Streaming (Long Press to Stop)</string>
    <string name="ipcam_fab_Stop">Stop Streaming</string>

    <!--Preference-->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Switch settings -->
    <string name="pref_header_switch">Switch</string>
    <string name="pref_switch_host_default">192.168.5.150</string>
    <string name="pref_switch_host_title">Slave IP of PLC</string>
    <string name="pref_switch_host_message">PLZ restart app to apply changes</string>
    <string name="pref_switch_port_default">502</string>
    <string name="pref_switch_port_title">Port of PLC (502)</string>
    <string name="pref_switch_timeout_default">500</string>
    <string name="pref_switch_timeout_title">Connection Timeout (500)</string>
    <string name="pref_switch_retries_default">1</string>
    <string name="pref_switch_retries_title">Connection Retries (1)</string>

    <!-- Theme settings  -->
    <string name="pref_header_theme">Theme</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- IPCam Settings -->
    <string name="pref_header_ipcam">IP Camera</string>

    <string name="pref_title_webcamIP">Web Camera IP</string>
    <string name="pref_default_webcamIP">127.0.0.1:8080/video</string>
    <string name="pref_summary_showfps">Show FPS at down-right corner</string>
    <string name="pref_title_showfps">Show FPS</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Others-->
    <string name="reference_text">Default Port: 502</string>
    <string name="alertDialog_confirm">Confirm</string>
    <string name="about_checkVersion">Check for new version</string>

    <!--Errors-->
    <string name="modbus_not_init">Modbus Cannot Initialize</string>
    <string name="modbus_not_read">Modbus Cannot Read</string>
    <string name="modbus_not_write">Modbus Cannot Write</string>
    <string name="modbus_refreshing">Refreshing</string>

</resources>
