<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:defaultValue="@string/pref_switch_host_default"
        android:key="pref_switch_host"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_switch_host_title" />
    <EditTextPreference
        android:defaultValue="@string/pref_switch_port_default"
        android:key="pref_switch_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_switch_port_title"
        android:numeric="integer"/>
    <EditTextPreference
        android:defaultValue="@string/pref_switch_timeout_default"
        android:key="pref_switch_timeout"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_switch_timeout_title"
        android:numeric="integer"/>
    <EditTextPreference
        android:defaultValue="@string/pref_switch_retries_default"
        android:key="pref_switch_retries"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_switch_retries_title"
        android:numeric="integer"/>
</PreferenceScreen>
