<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_switch" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_theme" />
        <item
            android:id="@+id/nav_ipcam"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_ipcam" />
        <item
            android:id="@+id/nav_preference"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_preference" />
    </group>

    <item android:title="@string/drawer_about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/drawer_about" />
            <item
                android:id="@+id/nav_reference"
                android:title="@string/drawer_reference" />
            <item
                android:id="@+id/nav_exit"
                android:title="@string/drawer_exit" />
        </menu>
    </item>

</menu>
